# Enterprise-RAG

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml  pages.yml
apps/api/: alembic.ini
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/app/: db.py  main.py  security.py
apps/api/app/routers/: auth.py  chat.py  documents.py  misc.py  workspaces.py
apps/web/: next.config.js  package-lock.json  package.json  server.js  tsconfig.json
apps/web/app/: page.tsx
apps/worker/: main.py
assets/: pages.css
docs/: api.md  architecture.md  data-model.md  demo-script.md  evaluation.md  index.html  production-readiness.md  retrieval.md  security.md  styles.css  troubleshooting.md
docs/adr/: 0001-architecture.md  0002-cache-key-isolation.md
evaluation-data/: demo_questions.json
infrastructure/docker/: api.Dockerfile  web.Dockerfile  worker.Dockerfile
infrastructure/prometheus/: prometheus.yml
pages/: api.html  architecture.html  data-model.html  evaluation.html  production-readiness.html  retrieval.html  security.html
sample-data/: customer-support-faq.md  employee-leave-policy.md  information-security-policy.md  product-documentation.md  travel-reimbursement-policy.md
scripts/: run_evaluation.py  seed_demo.py
site/: index.html
sqlmodel/: __init__.py
tests/: test_cache_keys.py  test_core.py
