[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-rag"
version = "0.1.0"
description = "Enterprise Knowledge Assistant RAG reference scaffold"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlmodel",
  "psycopg[binary]",
  "pydantic-settings",
  "python-jose[cryptography]",
  "passlib[bcrypt]",
  "python-multipart",
  "redis",
  "qdrant-client",
  "boto3",
  "prometheus-client",
  "httpx",
  "pytest",
  "langgraph",
]

[tool.setuptools.packages.find]
include = ["apps*", "packages*", "sqlmodel*"]
exclude = ["tests*", "docs*", "sample-data*", "evaluation-data*", "infrastructure*", "scripts*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
